update the dom events folder

--- a/DOM Events/EventBasics/index.html
+++ b/DOM Events/EventBasics/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Basics</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>Events</h1>
-    <button onclick="alert('you clicked me!'); alert('stop clicking')">Click Me!</button>
-
-    <button id="v2">Click Me (2nd version)</button>
-
-    <button id="v3">Click Me (3rd version)</button>
-
-    <button id="tas">Twist & Shout</button>
+    <button>CLick Me!</button>
+    <button id="v2">Click me too!</button>
+    <button id="v3">YOu clicked me!!</button>
+    <button id="tas">Shout!</button>
 
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
