--- a/DOM Events/EventsAndThis/index.html
+++ b/DOM Events/EventsAndThis/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Events and This</title>
 
     <style>
-        button {
-            width: 100px;
-            height: 100px;
-            margin: 20px;
-        }
+      button {
+        width: 100px;
+        height: 100px;
+        margin: 20px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <button>CLICK</button>
     <button>CLICK</button>
     <button>CLICK</button>
@@ -68,6 +67,5 @@
     <h1>Click Me!</h1>
 
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
