--- a/AJAX_CODE/AJAX_CODE/Axios/index.html
+++ b/AJAX_CODE/AJAX_CODE/Axios/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <!-- get axios  -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <script src="app.js"></script>
